# slugify-rs

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  COVERAGE.md  Cargo.toml  README.md  REPORT.md
.cargo/: config.toml
.github/workflows/: ci.yml  create-branch-from-tag.yml  macos-build.yml  publish-pypi.yml
scripts/: bench_compare.py  build_and_test_wheel.sh  pre-commit.sh  run-tests.sh
src/: lib.rs  lib_py.rs  slugify.rs  special.rs
tests/: golden_harness.py
tests/python/: test_examples.py  test_import.py
