[package]
name = "slugify-rs"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of slugify with optional PyO3 bindings."
readme = "README.md"
license = "MIT"
authors = ["greg <greg@gregorymariani.com>"]
repository = "https://github.com/gmaOCR/slugify-rs"
homepage = "https://github.com/gmaOCR/slugify-rs"
keywords = ["slugify", "unicode", "pyo3", "slug"]

[dependencies]
once_cell = "1.20"
regex = "1.10"
unicode-normalization = "0.1"
deunicode = "1.1"
html-escape = "0.2"
unicode-segmentation = "1"

[lib]
name = "python_slugify_pi"
crate-type = ["cdylib"]

[features]
default = []
python = ["pyo3/extension-module"]

[dependencies.pyo3]
version = "0.26"
optional = true
features = ["extension-module"]

[package.metadata.maturin]
# Optional: specify the exact PyPI package name (uncomment to override)
# name = "slugify-rs"
